fixed responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 .bottom-left {
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     left: 20px;
     z-index: 2;
@@ -30,7 +30,7 @@
 }
 
 .bottom-right {
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 20px;
     z-index: 1;
